--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "13.5.3",
+    "openai": "^5.19.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
