--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,24 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+.venv/
+venv/
+ENV/
+
+# Temporary files
+temp/
+*.wav
+*.mp3
+*.m4a
+*.ogg
+
+# Audio files (anywhere in project)
+**/*.wav
+**/*.mp3
+**/*.m4a
+**/*.ogg
